--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         margin-top: 150px;
       }
 
+      img.comment2pfp {
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        margin-bottom: -100px;
+        margin-left: -50px;
+      }
+
       p.usertext {
         font-weight: bold;
         margin-left: 120px;
@@ -61,6 +69,17 @@
         margin-top: -15px;
         font-weight: bold;
       }
+
+      p.comment2username {
+        margin-top: 60px;
+        margin-left: 175px;
+      }
+
+      p.comment2text {
+        margin-left: 175px;
+        margin-top: -15px;
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
@@ -73,9 +92,13 @@
       width="100%"
       height="100%"
     />
+    <img class="comment2pfp" src="images/cr7.webp" alt="cr7" />
+
     <p class="username">@aburuqayah</p>
     <p class="usertext">i love to fuck molu in his ass</p>
     <p class="commentusername">@molu</p>
     <p class="commenttext">i love to get fucked by you in the ass 😘</p>
+    <p class="comment2username">@Cristiano Ronaldo</p>
+    <p class="comment2text">can i get the link for the video?</p>
   </body>
 </html>
